test/flowanalysis/recursion/rec_obj-2.good
Error: Unable to determine type of field from nil (rec_obj-2.chpl:9)
